[project]
name = "howtowear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "google-genai>=1.70.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "python-decouple>=3.8",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]
